2008-06-27  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c (do_gather_stats): Change to use activity_info
	instead of activity_stats.

	(main): Introduce code to delay process creation.

2008-06-26  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c: Include <stdlib.h>.
	(module_count): Make a global static.
	(activities): Likewise.
	(all_done): New variable.
	(now): New function.
	(epoch): Likewise.
	(struct stat): New structure.
	(stats_count): New variable.
	(stats): Likewise.
	(do_gather_stats): New function.
	(main): If --stats is specified, fork a thread to gather
	statistics.  When all processes have exited, print out the
	statistics.

	(main): Name activities according to their first argument.

2008-05-31  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am ($(addsuffix .o, $(files))): Use $(CCAS) instead of
	$(AS).

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am [ENABLE_TESTS]: Don't build package's program.

2008-05-29  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (modules.h): Add an empty string after the command
	line removing the requirement that a module have a command line
	variable.

2008-05-21  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (modules.h): When generating variable names, replace
	any -'s with _'s.
	($(addsuffix .S, $(files))): Likewise.

2008-02-21  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (AM_CPPFLAGS): Remove variable.
	(AM_LDFLAGS): Likewise.
	(hieronymus_CPPFLAGS): New variable.
	(hieronymus_CFLAGS): Likewise.
	(hieronymus_LDFLAGS): Likewise.
	(hieronymus_LDADD): Don't include libc.a directly, use the value
	of $(USER_LDADD) instead.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c (activity_alloc): Update user of storage_alloc to
	be consistent with new API.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c (main): Don't pass ACTIVITY_POLICY_VOID to
	activity_alloc.  Build up a policy based on the configuration and
	pass that instead.